--- a/app/assets/stylesheets/pages/_people.scss
+++ b/app/assets/stylesheets/pages/_people.scss
@@ -80,7 +80,8 @@
           padding-bottom: ($padding * 4);
         }
         h1 {
-          font-size: 48px;
+          font: 48px/1.145833333em $font-display;
+          letter-spacing: -.01em;
         }
         h2 {
           margin-bottom: ($padding * 4);
